Add api,modify and add unit test
