# src/main/java/com/example/aop/mapStruct/exercise/controllers/UserController.java
@@ -1,17 +1,14 @@
 package com.example.aop.mapStruct.exercise.controllers;
 
+import com.example.aop.mapStruct.exercise.api.model.*;
+import com.example.aop.mapStruct.exercise.repository.UserRepository;
 import com.example.aop.mapStruct.exercise.services.UserService;
-import com.example.aop.mapStruct.exercise.api.model.CreateUserRequest;
-import com.example.aop.mapStruct.exercise.api.model.ObjectCreationSuccessResponse;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.Validate;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 @RestController
 @AllArgsConstructor
@@ -20,17 +17,24 @@ import org.springframework.web.bind.annotation.RestController;
 public class UserController {
     public static final String POST_USER_INFO_URI = "/postNewUsers";
 
+    public static final String GET_USER_INFO_URI = "/getUserList";
+
     public UserService userService;
 
     @RequestMapping(value = POST_USER_INFO_URI, method = RequestMethod.POST)
     public ResponseEntity<ObjectCreationSuccessResponse> postNewUsersInfo(@RequestBody final CreateUserRequest request) {
         Validate.notBlank(request.getEmail(), "Email must not be empty");
         Validate.notBlank(request.getFullName(),"Fullname must not be empty");
-
         userService.createNewUser(request);
         ObjectCreationSuccessResponse result = new ObjectCreationSuccessResponse();
         result.setResponseCode(HttpStatus.CREATED.value());
         result.setMessage("Successfully");
         return new ResponseEntity<>(result, HttpStatus.CREATED);
+    }
+
+    @RequestMapping(value = GET_USER_INFO_URI, method = RequestMethod.GET)
+    public ResponseEntity<UserListResponse> getUserInfo(@RequestParam final String order, String field,Integer page){
+        UserListResponse userList = userService.getUserList(order,field,page);
+        return ResponseEntity.ok(userList);
     }
 }
